<resources>
    <string name="app_name">Multiply</string>
    <string name="TVnumberQuestionText">Number:</string>
    <string name="TVnumberCorrectScore">0/0</string>
    <string name="TVnumberLeftText">Num left: 0</string>
    <string name="maxTitleText">Min</string>
    <string name="resetGameText">Reset Game</string>
    <string name="select_numbers">Select Numbers</string>
    <string name="stats">Stats</string>
    <string name="_20x20">20x20</string>
    <string name="_50">50%</string>
    <string name="preference_file_key">com.example.multiplicationtablequiz.1337.PREFERENCE_FILE_KEY</string>
    <string name="activeNumbersKey">com.example.multiplicationtablequiz.activity.activeNumbersKey</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cancel">cancel</string>
</resources>
